<resources>
    <string name="app_name">Vytality Health</string>
    <string name="app_description">Vytality Health is a co-caring social \n platform for reliable, authentic support \n of people\'s health and well being.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="or_log_in_with">OR LOG IN WITH</string>
    <string name="email">EMAIL</string>
    <string name="email_cml">Email</string>
    <string name="mobile_no">MOBILE #</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="sign_up_with_google">SIGN UP WITH GOOGLE</string>
    <string name="sign_up_with_my_email">SIGN UP WITH MY EMAIL</string>
    <string name="log_in_with_facebook">LOG IN WITH FACEBOOK</string>
    <string name="log_in_with_google">LOG IN WITH GOOGLE</string>
    <string name="sign_up_with_fb_dialog_header">"Vytality" Wants to use "facebook.com" to Sign In</string>
    <string name="sign_up_with_google_dialog_header">"Vytality" Wants to use "google.com" to Sign In</string>
    <string name="sign_up_dialog_body">This allows the app and website to share information about you.</string>
    <string name="cancel_btn">Cancel</string>
    <string name="continue_btn">Continue</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="enable_touch_id">Enable Touch ID</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="touch_id_for_1password">Touch ID for "1Password"</string>
    <string name="unlock_1password">Unlock 1Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="connections">Connections</string>
    <string name="profile">Profile</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="trusted_circle">Trusted Circle</string>
    <string name="leagues_of_love">Leagues of Love</string>
    <string name="activity">Activity</string>
    <string name="my_profile_info">My Profile Info</string>
    <string name="care_points">Care Points</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="create_a_post">Create a Post</string>
    <string name="goal">Goal</string>
    <string name="task">Task</string>
    <string name="mood">Mood</string>
    <string name="wisdom">Wisdom</string>
    <string name="goal_name">Goal Name</string>
    <string name="due_date">Due Date</string>
    <string name="reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="add_photo_or_video">Add Photo/Video</string>
    <string name="who_can_see_this_post">Who can see this post?</string>
    <string name="contacts">Contacts</string>
    <string name="submit">SUBMIT</string>
    <string name="create_a_goal">Create a Goal</string>
    <string name="task_name">Task Name</string>
    <string name="location">Location</string>
    <string name="create_a_task">Create a Task</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="back">Back</string>
    <string name="select_media">Select Media</string>
    <string name="take_photo">Take Photo...</string>
    <string name="choose_from_library">Choose from Library...</string>
    <string name="done">Done</string>
    <string name="messages_to">Messages to</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_connections">Connections</string>

    <string name="facebook_app_id">329229717648335</string>
    <string name="fb_login_protocol_scheme">fb329229717648335</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
