<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_appDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_below="@+id/textView_appName"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_description"/>

    <Button
        android:id="@+id/btn_signUpWithFB"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/sign_up_with_facebook"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="170dp"
        android:background="@drawable/rounded_button"/>
        <!--android:drawableLeft="@drawable/my_btn_icon"-->

    <Button
        android:id="@+id/btn_signUpWithGoogle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="110dp"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/btn_signUpWithEmail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/sign_up_with_my_email"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"/>
</RelativeLayout>