<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="cursive"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_appDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_below="@+id/textView_appName"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_description"/>

    <Button
        android:id="@+id/btn_logIn_with_fb"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/log_in_with_facebook"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="210dp"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/btn_logIn_with_google"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/log_in_with_google"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="150dp"
        android:background="@drawable/rounded_button"/>


    <View
        android:id="@+id/leftLine"
        style="@style/HorizontalLine"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="108dp"
        android:layout_toLeftOf="@+id/textView_or_Login_with"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/textView_or_Login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:text="@string/or_log_in_with"/>

    <View
        android:id="@+id/rightLine"
        style="@style/HorizontalLine"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView_or_Login_with"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="108dp" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="31dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_mobile"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_email"
        android:layout_marginEnd="31dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/mobile_no"
        android:textColor="@color/colorWhite" />

</RelativeLayout>