<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileInfoTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profileAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"
                android:padding="10dp"/>

            <ImageView
                android:id="@+id/profileDescriptionEdit"
                android:layout_width="58dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:padding="10dp"
                android:src="@drawable/plus_icon" />

            <TextView
                android:id="@+id/profieDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="13dp"
                android:text="I have cared for my mother for the past seven years. I want to give her the best care
    possible, but it can be mentally taxing. I'm looking to connect with"/>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_cml"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"
                android:padding="10dp"/>

            <ImageView
                android:id="@+id/profileEmailEdit"
                android:layout_width="58dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:padding="10dp"
                android:src="@drawable/plus_icon" />

            <TextView
                android:id="@+id/profileEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="13dp"
                android:text="jennifer.hughes@gmail.com"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/profilePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"
                android:padding="10dp"/>

            <ImageView
                android:id="@+id/profilePhoneEdit"
                android:layout_width="58dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:padding="10dp"
                android:src="@drawable/plus_icon" />

            <TextView
                android:id="@+id/profilePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="13dp"
                android:text="650-924-9060"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>